Added Logout link
